syntax = "proto3";
import "common.proto";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.finance.trade.order";
option java_outer_classname = "orderRpcService";
option objc_class_prefix = "ORS";

service OrderRpcService {
    //获取交易用户PID
    rpc GetPidFromTrdAccoBrokerId (GetPIDReq) returns (UserPID) {
    };

    rpc getOrderInfo (OrderQueryInfo) returns (OrderResult) {
    };

    rpc getOrderDetail (OrderDetailQueryInfo) returns (OrderDetailResult) {
    };
    rpc getBankCardNumByUserProdId (UserProdId) returns (UserBankCardNum) {
    };

    rpc OpenAccount (BindCardInfo) returns (BindCardResult) {
    };
    rpc getLatestOrderDetail (UserProdId) returns (OrderDetailResult) {
    };
    rpc getAllOrderDetail (UserProdId) returns (OrderDetailResult) {};


    rpc getOrderDetailByParams (GenOrderIdAndFundCode) returns (OrderDetailResult) {};

    rpc getOrderDetailStatus (OrderDetailStatusRequest) returns (OrderDetailStatusResponse) {};

    rpc getFailedOrderDetails (GetOrderDetailInfoByPage) returns (OrderDetailPageResult) {};

    rpc getFundsTradeLimit (FundQuerys) returns (FundLimitResults) {};
}
//获取基金交易限额
message FundQuerys{
    repeated FundCodeQuerys fundCodeQuerys=1;
    int32 tradeType=2;//交易类型 022申购 024赎回
}
message FundCodeQuerys{
    string fundcode=1;
}
message FundLimitResults{
 repeated  FundLimitDetail fundLimitDetail=1;
}
message FundLimitDetail{
  string fundcode=1;//基金代号
  string minshare=2;//最低持有份额
  string minLimitValue=3;//最小交易限额
}
//获取交易用户PID
message GetPIDReq {
    int32 trd_broker_id = 1; //交易系统ID
    string trd_acco = 2; //交易账户
    int64 user_id = 3; //用户ID
}

//用户PID信息
message UserPID {
    string user_pid = 1; //用户身份证
    int64 user_id = 2; //用户 ID
}

//用户PID信息
message OrderDetailStatusReq {
    string user_prod_id = 1; //用户身份证
    int64 fund_code = 2; //用户 ID
}
message OrderQueryInfo {
    int64 userProdId = 1;
    int32 orderStatus = 2;
}


message OrderResult {
    string order_id = 1;
    int64 pre_order_id = 2;
    string bank_card_num = 3;
    int32 order_status = 4;
    int64 order_date = 5;
    int32 order_type = 6;
    int64 pay_amount = 7;
    int64 pay_fee = 8;
    int64 user_id = 9;
    int64 prod_id = 10;
    int64 group_id = 11;
    int64 user_prod_id = 12;
    int64 create_by = 13;
    int64 create_date = 14;
    int64 update_by = 15;
    int64 update_date = 16;
}


message OrderDetailQueryInfo {
    int32 order_detail_status = 1;
    int64 user_prod_id = 2;
}

message OrderDetailResult {
    repeated OrderDetail order_detail_result = 1;
}

message OrderDetailPageResult {
    int32 totalPages = 1;
    repeated OrderDetail order_detail_result = 2;
}


message UserBankCardNum {
    //用户银行卡号
    string user_bank_cardnum = 1;
}

message BindCardInfo {
    string cardNo = 1; //银行卡号
    string bankName = 2; //开户行名称
    int64 userId = 3; //用户ID
    string idCardNo = 4; //身份证号码
    string userPhone = 5; //用户电话
    string userName = 6; //用户名
    int32 riskLevel = 7; //用户风险评级
}

//用户PID信息
message OrderDetailStatusRequest {
    int64 user_prod_id = 1; //用户身份证
    string fund_code = 2; //用户 ID
}

//用户PID信息
message OrderDetailStatusResponse {
    int32 status = 1; //用户身份证
}
message BindCardResult {
    string tradeacco = 1; //交易帐号号
    ErrInfo err_info = 2; //绑卡失败信息
}

message GenOrderIdAndFundCode {
    string orderId = 1;
    string fundCode = 2;
    string applySerial = 3;
    int64 userProdId = 4;
    int32 trdType = 5;

}

message GetOrderDetailInfoByPage{
  int32 pageSize = 1;
  int32 pageNo = 2;
}